Implemented password recovery and reset.
